Fix payment banner visibility

--- a/src/style.css
+++ b/src/style.css
@@ -252,7 +252,7 @@ textarea {
 }
 
 .hidden {
-  display: none;
+  display: none !important;
 }
 
 .hidden-when-payment {
